👌 IMPROVE: Disable grid lines in GridPane components and add solution index display in StackPaneParcours