@@ -17,6 +17,8 @@ public class StackPaneParcours extends VBox {
     private HBox alignementBoutons;
     private List<Node> liste;
     private StackPane stackPaneScenario;
+    private javafx.scene.control.Label indiceSolution; // Ajout d'un Label pour afficher l'indice de la solution
+    private int solutionActuelle = 0; // Indice de la solution actuellement affichée
 
     public StackPaneParcours() {
 
@@ -26,9 +28,6 @@ public class StackPaneParcours extends VBox {
         stackPaneScenario.getChildren().add(tableParcours);
 
         liste = stackPaneScenario.getChildren();
-        final int dernierIndice = liste.size() - 1;
-        Node premierListe = liste.getFirst();
-        Node dernierListe = liste.get(dernierIndice);
 
         this.getChildren().add(stackPaneScenario);
 
@@ -37,26 +36,60 @@ public class StackPaneParcours extends VBox {
         Button solutionSuivante = new Button(">");
         Button derniereSolution = new Button(">>");
 
+        // Création du Label pour afficher l'indice de la solution actuelle
+        indiceSolution = new javafx.scene.control.Label("Solution 1/1");
+        indiceSolution.setStyle("-fx-font-weight: bold;");
+
         alignementBoutons = new HBox(10);
-        alignementBoutons.getChildren().addAll(premiereSolution, solutionPrecedente, solutionSuivante,
-                derniereSolution);
+        alignementBoutons.getChildren().addAll(premiereSolution, solutionPrecedente,
+                indiceSolution, solutionSuivante, derniereSolution);
         this.getChildren().add(alignementBoutons);
         alignementBoutons.setDisable(true);
         alignementBoutons.setAlignment(Pos.CENTER);
 
-        solutionSuivante.setOnAction(e -> liste.getFirst().toFront());
-
-        solutionPrecedente.setOnAction(e -> liste.getLast().toBack());
-        derniereSolution.setOnAction(e -> {
-            while (liste.getLast() != dernierListe) {
-                liste.getLast().toBack();
+        // Méthode utilitaire pour mettre à jour l'affichage de l'indice
+        Runnable mettreAJourIndice = () -> {
+            if (!liste.isEmpty()) {
+                int total = liste.size();
+                indiceSolution.setText("Solution " + (solutionActuelle + 1) + "/" + total);
+            } else {
+                indiceSolution.setText("Solution 0/0");
             }
+        };
 
+        // Bouton ">" : avance d'une solution (incrémente l'indice)
+        solutionSuivante.setOnAction(e -> {
+            if (!liste.isEmpty() && solutionActuelle < liste.size() - 1) {
+                solutionActuelle++;  // On incrémente l'indice pour aller à la solution suivante
+                liste.get(solutionActuelle).toFront();
+                mettreAJourIndice.run();
+            }
         });
 
+        // Bouton "<" : recule d'une solution (décrémente l'indice)
+        solutionPrecedente.setOnAction(e -> {
+            if (!liste.isEmpty() && solutionActuelle > 0) {
+                solutionActuelle--;  // On décrémente l'indice pour aller à la solution précédente
+                liste.get(solutionActuelle).toFront();
+                mettreAJourIndice.run();
+            }
+        });
+
+        // Bouton ">>" : va directement à la dernière solution
+        derniereSolution.setOnAction(e -> {
+            if (!liste.isEmpty()) {
+                solutionActuelle = liste.size() - 1;  // Aller à la dernière solution
+                liste.get(solutionActuelle).toFront();
+                mettreAJourIndice.run();
+            }
+        });
+
+        // Bouton "<<" : va directement à la première solution
         premiereSolution.setOnAction(e -> {
-            while (liste.getLast() != premierListe) {
-                liste.getFirst().toFront();
+            if (!liste.isEmpty()) {
+                solutionActuelle = 0;  // Aller à la première solution
+                liste.get(0).toFront();
+                mettreAJourIndice.run();
             }
         });
     }
@@ -114,6 +147,8 @@ public class StackPaneParcours extends VBox {
         liste = stackPaneScenario.getChildren();
         nouvelleTable.toFront();
         tableParcours = nouvelleTable;
+        solutionActuelle = 0; // Mise à jour de l'indice de la solution actuelle
+        indiceSolution.setText("Solution " + (solutionActuelle + 1) + "/" + liste.size()); // Mise à jour du texte
         alignementBoutons.setDisable(false);
     }
 
